--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <meta property="og:title" content="Sinodeep">
     <meta property="og:site_name" content="Sinodeep">
     <meta property="og:url" content="https://github.com/trushkai/Sinodeep">
-    <meta property="og:description"
-        content="blablabla ...">
+    <meta property="og:description" content="blablabla ...">
     <meta property="og:image" content="https://trushkai.github.io/Sinodeep/lab/lgo.svg">
 
     <meta name="theme-color" content="#f0adb1" />
@@ -43,31 +42,29 @@
     <main>
 
         <section class="hero">
-            <div class="line1">
-            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
                         <h1 class="hero-title">Открываем Китай <br> для вашего бизнеса</h1>
-                        <p class="hero-text">Мы не просто компания, мы - ваш партнер,<br> который заботится о вас на каждом
+                        <p class="hero-text">Мы не просто компания, мы - ваш партнер,<br> который заботится о вас на
+                            каждом
                             шаге</p>
                         <a href="#" class="btn btn-primary">Получите бесплатную консультацию</a>
                     </div>
                     <div class="col-md-3">
                     </div>
-                  
+
                 </div>
             </div>
-            <div class="line1">
-            </div>
+            <div class="rounded-line"></div>
         </section>
 
         <section class="help">
             <div class="container">
                 <h2 class="help-title">Вот как мы можем Вам помочь:</h2>
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="help__item--horizontal">
+                    <div class="col-md-3">
+                        <div class="help__item">
                             <h3 class="help__item-title">Откроем для вас двери заводов</h3>
                             <p class="help__item-text">Мы найдем для вас надежных производителей в Китае, чтобы Вы
                                 сотрудничали только с лучшими.</p>
@@ -94,27 +91,79 @@
                                 Китае, минуя любые сложности.</p>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="help__item2">
-                            <h3 class="help__item-title">Лично контролируем качество</h3>
-                            <p class="help__item-text">Наши специалисты выезжают прямо на фабрику, чтобы лично проверить
-                                качество продукции. Мы убедимся, что товар соответствует вашим требованиям.</p>
+                </div>
+
+                <div class="row">
+
+                        <div class="col-md-4">
+                            <div class="help__item2">
+                                <h3 class="help__item-title">Лично контролируем качество</h3>
+                                <p class="help__item-text">Наши специалисты выезжают прямо на фабрику, чтобы лично
+                                    проверить
+                                    качество продукции. Мы убедимся, что товар соответствует вашим требованиям.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="help__item--horizontal">
+                                <h3 class="help__item-title">Переведем с китайского на ваш язык</h3>
+                                <p class="help__item-text">Наша команда профессиональных переводчиков поможет вам с
+                                    любыми
+                                    языковыми барьерами и обеспечит комфортное общение.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="help__item--horizontal">
+                                <h3 class="help__item-title">Найдем самый короткий путь</h3>
+                                <p class="help__item-text">Наши специалисты подберут для вас оптимальный логистический
+                                    маршрут, чтобы ваши товары прибыли вовремя и с минимальными затратами.</p>
+                            </div>
+                        </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="questions">
+            <div class="container">
+                <div class="question">
+                    <h2 class="name-question">Часто задаваемые вопросы</h2>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard1" />
+                            <label for="questioncard1">Есть ли у вас минимальная сумма заказа?</label>
+                            <div class="question__hidden">Содержимое 1</div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="help__item--horizontal">
-                            <h3 class="help__item-title">Переведем с китайского на ваш язык</h3>
-                            <p class="help__item-text">Наша команда профессиональных переводчиков поможет вам с любыми
-                                языковыми барьерами и обеспечит комфортное общение.</p>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard2" />
+                            <label for="questioncard2">Какие документы необходимы для оформления доставки?</label>
+                            <div class="question__hidden">Содержимое 2</div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="help__item--horizontal">
-                            <h3 class="help__item-title">Найдем самый короткий путь</h3>
-                            <p class="help__item-text">Наши специалисты подберут для вас оптимальный логистический
-                                маршрут, чтобы ваши товары прибыли вовремя и с минимальными затратами.</p>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard3" />
+                            <label for="questioncard3">Кто несет ответственность за повреждение груза во время
+                                доставки?</label>
+                            <div class="question__hidden">Содержимое 3</div>
                         </div>
                     </div>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard4" />
+                            <label for="questioncard4">Оказываете ли вы помощь в таможенном оформлении?</label>
+                            <div class="question__hidden">Содержимое 4</div>
+                        </div>
+                    </div>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard5" />
+                            <label for="questioncard5">Предоставляете ли вы услуги по упаковке груза?</label>
+                            <div class="question__hidden">Содержимое 5</div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
