создала в css общие стили, изменила блок Hero

--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
     <title>Sinodeep</title>
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-
     <script defer src="js/script.js"></script>
 
-    <meta name="keywords" content="Food delivery,Food,Delivery">
-    <meta name="description" content="Observe the Food Feel the Taste.">
+    <meta name="keywords" content="sinodeep, Sinodeep">
+    <meta name="description" content="Открываем Китай для вашего бизнеса">
 
     <link rel="icon" type="image/ico" sizes="32x32" href="lab/logo_without_text.svg">
     <link rel="icon" type="image/ico" sizes="16x16" href="lab/logo_without_text.svg">
@@ -35,30 +32,45 @@
 </head>
 
 <body>
-    <header>
-
+    <!-- Header Section -->
+    <header class="header">
+        <div class="container navbar">
+            <div class="navbar__logo">
+                <img src="lab/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
+            </div>
+            <div class="navbar__links">
+                <a href="#services" class="navbar__link"><h4>Услуги</h4></a>
+                <a href="#advantages" class="navbar__link"><h4>Преимущества</h4></a>
+                <a href="#process" class="navbar__link"><h4>Процесс работы</h4></a>
+                <a href="#questions" class="navbar__link"><h4>Вопросы</h4></a>
+                <a href="#contact" class="navbar__link"><h4>Контакты</h4></a>
+            </div>
+            <div class="navbar__contact">
+                <span class="navbar__contact-text"><p>Напишите нам,<br> мы всегда онлайн</p></span>
+                <div class="navbar__socials">
+                    <a href="#" class="navbar__social-icon"><img src="lab/vkontacteBlack.svg" alt="Vkontakte"></a>
+                    <a href="#" class="navbar__social-icon"><img src="lab/telegramBlack.svg" alt="Telegram"></a>
+                    <a href="#" class="navbar__social-icon"><img src="lab/whatsappBlack.svg" alt="WhatsApp"></a>
+                </div>
+            </div>
+        </div>
+        <span class="line"></span> 
     </header>
 
     <main>
-
-        <section class="hero">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h1 class="hero-title">Открываем Китай <br> для вашего бизнеса</h1>
-                        <p class="hero-text">Мы не просто компания, мы - ваш партнер,<br> который заботится о вас на
-                            каждом
-                            шаге</p>
-                        <a href="#" class="btn btn-primary">Получите бесплатную консультацию</a>
-                    </div>
-                    <div class="col-md-3">
-                    </div>
-
+        <!-- Hero Section -->
+        <section id="hero" class="hero">
+            <div class="container hero__wrapper">
+                <div class="hero__content">
+                    <h1 class="hero__title">Открываем Китай<br> для вашего бизнеса</h1>
+                    <h3 class="hero__description">Мы не просто компания, мы — ваш партнёр,<br> который заботится о вас на каждом шаге</h3>
+                    <a href="#contact" class="hero__btn">Получите бесплатную консультацию</a>
                 </div>
             </div>
             <div class="rounded-line"></div>
         </section>
-
+                    
+        <!-- Help Section -->
         <section class="help">
             <div class="container">
                 <h2 class="help-title">Вот как мы можем Вам помочь:</h2>
