--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <meta name="keywords" content="sinodeep, Sinodeep">
     <meta name="description" content="Открываем Китай для вашего бизнеса">
 
-    <link rel="icon" type="image/ico" sizes="32x32" href="lab/logo_without_text.svg">
-    <link rel="icon" type="image/ico" sizes="16x16" href="lab/logo_without_text.svg">
+    <link rel="icon" type="image/ico" sizes="32x32" href="lib/logo_without_text.svg">
+    <link rel="icon" type="image/ico" sizes="16x16" href="lib/logo_without_text.svg">
     <link rel="shortcut icon" href="icons/icon1.ico">
 
     <meta property="og:title" content="Sinodeep">
     <meta property="og:site_name" content="Sinodeep">
     <meta property="og:url" content="https://github.com/trushkai/Sinodeep">
     <meta property="og:description" content="blablabla ...">
-    <meta property="og:image" content="https://trushkai.github.io/Sinodeep/lab/lgo.svg">
+    <meta property="og:image" content="https://trushkai.github.io/Sinodeep/lib/lgo.svg">
 
     <meta name="theme-color" content="#f0adb1" />
     <meta name="msapplication-navbutton-color" content="#4285f4" />
@@ -36,7 +36,7 @@
     <header class="header">
         <div class="container navbar">
             <div class="navbar__logo">
-                <img src="lab/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
+                <img src="lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
             </div>
             <div class="navbar__links">
                 <a href="#services" class="navbar__link">
@@ -60,9 +60,9 @@
                     <p>Напишите нам,<br> мы всегда онлайн</p>
                 </span>
                 <div class="navbar__socials">
-                    <a href="#" class="navbar__social-icon"><img src="lab/vkontacteBlack.svg" alt="Vkontakte"></a>
-                    <a href="#" class="navbar__social-icon"><img src="lab/telegramBlack.svg" alt="Telegram"></a>
-                    <a href="#" class="navbar__social-icon"><img src="lab/whatsappBlack.svg" alt="WhatsApp"></a>
+                    <a href="#" class="navbar__social-icon"><img src="lib/vkontacteBlack.svg" alt="Vkontakte"></a>
+                    <a href="#" class="navbar__social-icon"><img src="lib/telegramBlack.svg" alt="Telegram"></a>
+                    <a href="#" class="navbar__social-icon"><img src="lib/whatsappBlack.svg" alt="WhatsApp"></a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
 
     <main>
         <!-- Hero Section -->
-        <section id="hero" class="hero">
+        <section id="hero" class="hero">            
             <div class="container hero__wrapper">
                 <div class="hero__content">
                     <h1 class="hero__title">Открываем Китай<br> для вашего бизнеса</h1>
@@ -80,7 +80,6 @@
                     <a href="#contact" class="hero__btn">Получите бесплатную консультацию</a>
                 </div>
             </div>
-            <div class="rounded-line"></div>
         </section>
 
         <!-- Help Section -->
@@ -205,51 +204,50 @@
                 </div>
             </div>
         </section>
-            <!-- Questions Section -->
-            <section class="questions">
-                <div class="container">
-                    <div class="question">
-                        <h2 class="name-question">Часто задаваемые вопросы</h2>
-                        <div class="question-container">
-                            <div class="questioncard">
-                                <input type="checkbox" id="questioncard1" />
-                                <label for="questioncard1">Есть ли у вас минимальная сумма заказа?</label>
-                                <div class="question__hidden">Содержимое 1</div>
-                            </div>
+        <!-- Questions Section -->
+        <section id="questions" class="questions">
+            <div class="container">
+                <div class="question">
+                    <h2 class="name-question">Часто задаваемые вопросы</h2>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard1" />
+                            <label for="questioncard1">Есть ли у вас минимальная сумма заказа?</label>
+                            <div class="question__hidden">Содержимое 1</div>
                         </div>
-                        <div class="question-container">
-                            <div class="questioncard">
-                                <input type="checkbox" id="questioncard2" />
-                                <label for="questioncard2">Какие документы необходимы для оформления доставки?</label>
-                                <div class="question__hidden">Содержимое 2</div>
-                            </div>
+                    </div>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard2" />
+                            <label for="questioncard2">Какие документы необходимы для оформления доставки?</label>
+                            <div class="question__hidden">Содержимое 2</div>
                         </div>
-                        <div class="question-container">
-                            <div class="questioncard">
-                                <input type="checkbox" id="questioncard3" />
-                                <label for="questioncard3">Кто несет ответственность за повреждение груза во время
-                                    доставки?</label>
-                                <div class="question__hidden">Содержимое 3</div>
-                            </div>
+                    </div>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard3" />
+                            <label for="questioncard3">Кто несет ответственность за повреждение груза во время
+                                доставки?</label>
+                            <div class="question__hidden">Содержимое 3</div>
                         </div>
-                        <div class="question-container">
-                            <div class="questioncard">
-                                <input type="checkbox" id="questioncard4" />
-                                <label for="questioncard4">Оказываете ли вы помощь в таможенном оформлении?</label>
-                                <div class="question__hidden">Содержимое 4</div>
-                            </div>
+                    </div>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard4" />
+                            <label for="questioncard4">Оказываете ли вы помощь в таможенном оформлении?</label>
+                            <div class="question__hidden">Содержимое 4</div>
                         </div>
-                        <div class="question-container">
-                            <div class="questioncard">
-                                <input type="checkbox" id="questioncard5" />
-                                <label for="questioncard5">Предоставляете ли вы услуги по упаковке груза?</label>
-                                <div class="question__hidden">Содержимое 5</div>
-                            </div>
+                    </div>
+                    <div class="question-container">
+                        <div class="questioncard">
+                            <input type="checkbox" id="questioncard5" />
+                            <label for="questioncard5">Предоставляете ли вы услуги по упаковке груза?</label>
+                            <div class="question__hidden">Содержимое 5</div>
                         </div>
-
                     </div>
                 </div>
-            </section>
+            </div>    
+        </section>    
 
     </main>
     <!-- Footer Section -->
@@ -259,7 +257,7 @@
                 <div class="footer__wrapper">
                     <div class="footer-left">
                         <div class="img-footer">
-                            <img src="lab/footer.svg" alt="Логотип">
+                            <img src="lib/footer.svg" alt="Логотип">
                         </div>
                     </div>
                     <div class="footer-right">
@@ -284,9 +282,9 @@
                             <div class="messager-link">
                                 <h3>Задайте вопрос в мессенджер</h3>
                                 <div class="messagers">
-                                    <a href="#" class="messenger-item"><img src="lab/vkontacte.svg" alt="Vkontakte"></a>
-                                    <a href="#" class="messenger-item"><img src="lab/telegram.svg" alt="Telegram"></a>
-                                    <a href="#" class="messenger-item"><img src="lab/whatsapp.svg" alt="WhatsApp"></a>
+                                    <a href="#" class="messenger-item"><img src="lib/vkontacte.svg" alt="Vkontakte"></a>
+                                    <a href="#" class="messenger-item"><img src="lib/telegram.svg" alt="Telegram"></a>
+                                    <a href="#" class="messenger-item"><img src="lib/whatsapp.svg" alt="WhatsApp"></a>
                                 </div>
                             </div>
                         </div>
