--- a/index.html
+++ b/index.html
@@ -204,6 +204,77 @@
                 </div>
             </div>
         </section>
+
+        <!-- Partners Section -->
+        <section id="partners" class="pertners">
+            <div class="container container_partners">
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/alfa-m.svg" alt="Альфа-М" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/first_hardware.svg" alt="First Hardware" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/techno_vector.svg" alt="Techno Vector" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/moscow_government.svg" alt="Московское правительство" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/tm_pz.svg" alt="TM PZ" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/kamaz.svg" alt="КАМАЗ" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/tatneft.svg" alt="Татнефть" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/rostselmash.svg" alt="Ростсельмаш" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+                <div class="partner-card">
+                    <div class="card-3d">
+                        <div class="card-face">
+                            <img src="/Sinodeep/lib/partners/height.svg" alt="Height" class="partner-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!-- Questions Section -->
         <section id="questions" class="questions">
             <div class="container">
