--- a/ru/index.html
+++ b/ru/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/reset.css">
     <script defer src="/js/script.js"></script>
+    <script defer src="/server.js"></script>
 
     <meta name="keywords" content="sinodeep, Sinodeep">
     <meta name="description" content="Открываем Китай для вашего бизнеса">
