--- a/en/index.html
+++ b/en/index.html
@@ -3,20 +3,21 @@
 
 <head>
     <meta charset="utf-8">
+    <base href="/Sinodeep/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sinodeep</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/reset.css">
-    <script defer src="/js/script.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <script defer src="../js/script.js"></script>
 
     <meta name="keywords" content="sinodeep, Sinodeep">
     <meta name="description" content="Открываем Китай для вашего бизнеса">
 
-    <link rel="icon" type="image/ico" sizes="32x32" href="/lib/logo_without_text.svg">
-    <link rel="icon" type="image/ico" sizes="16x16" href="/lib/logo_without_text.svg">
-    <link rel="shortcut icon" href="/icons/icon1.ico">
+    <link rel="icon" type="image/ico" sizes="32x32" href="../lib/logo_without_text.svg">
+    <link rel="icon" type="image/ico" sizes="16x16" href="../lib/logo_without_text.svg">
+    <link rel="shortcut icon" href="../icons/icon1.ico">
 
     <meta property="og:title" content="Sinodeep">
     <meta property="og:site_name" content="Sinodeep">
@@ -37,7 +38,7 @@
    <header class="header">
     <div class="container navbar">
         <div class="navbar__logo">
-            <img src="/lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
+            <img src="../lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
         </div>
         <div class="navbar__links">
             <a href="#files" class="navbar__link" data-i18n="files">
