--- a/ru/index.html
+++ b/ru/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <base href="/Sinodeep/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sinodeep</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/reset.css">
-    <script defer src="../js/script.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <script defer src="/js/script.js"></script>
+    <script defer src="/server.js"></script>
 
     <meta name="keywords" content="sinodeep, Sinodeep">
     <meta name="description" content="Открываем Китай для вашего бизнеса">
@@ -38,7 +38,7 @@
     <header class="header">
         <div class="container navbar">
             <div class="navbar__logo">
-                <img src="../lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
+                <img src="/lib/logo.svg" alt="Sinodeep Logo" class="navbar__logo-image">
             </div>
             <div class="navbar__links">
                 <a href="#portfolio" class="navbar__link" data-i18n="files">
@@ -62,7 +62,7 @@
             </div>
             <div class="navbar__right">
                 <button id="language-switcher" class="language-switcher" aria-label="Switch language">
-                    <img src="../lib/ruen.svg" alt="Русский" class="language-icon" id="language-icon">
+                    <img src="/lib/ruen.svg" alt="Русский" class="language-icon" id="language-icon">
                 </button>
             </div>
             <button class="burger-btn burger">
